fix farmer